--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-  <div class="QR-project">
+  <main class="QR-project">
 <div class="container QR-CH">
 <div class="QR-image">
   <img src="images/image-qr-code.png" alt="QR Code" >
@@ -43,6 +43,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Zaid</a>.
   </div>
-  </div>
+</main>
 </body>
 </html>
