--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 </head>
 <body>
   <main class="QR-project">
-<div class="container QR-CH">
-<div class="QR-image">
+<article class="container QR-CH">
+
+<figure class="QR-image">
   <img src="images/image-qr-code.png" alt="QR Code" >
-</div>
+</figure>
 
 <div class="container-sm">
   <h1 class="QR-Header text-center text-xl ">  Improve your front-end skills by building projects</h1>
@@ -31,18 +32,12 @@
 
   </div>
 
-  
+</article>
 
-  
-
-</div>
-
- 
-  
- <div class="attribution container-sm text-center">
+</main>
+ <footer class="attribution container-sm text-center">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Zaid</a>.
-  </div>
-</main>
+ </footer>
 </body>
 </html>
